src/app/[locale]/(Home)/home.css
/* ... */
 /* الحاوية الأساسية */
 .case-studies-container {
   display: flex;
   align-items: center;
   gap: 20px;
   margin: 20px;
 }

 /* زر Case Studies */
 .case-studies-btn {
   padding: 10px 20px;
   color: var(--main-color);
   background-color: transparent;
   border: none;
   border-radius: 30px;
   font-size: 20px;
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.3s ease;
   position: relative;
   z-index: 1;
 }

 .case-studies-btn:before {
   position: absolute;
   content: '';
   width: 65px;
   height: 25px;
   background-color: #FA6409;
   top: 50%;
   left: 10px;
   transform: translateY(-50%);
   border-radius: 4px;
   z-index: -1;
 }

 .ant-select-item-option-active {
   background: rgba(250, 100, 9, 0.2) !important;
 }

 /* القائمة المنسدلة */
 .dropdown-container {
   position: relative;
 }

 .dropdown-select {
   padding: 10px 15px;
   font-size: 14px;
   color: #333;
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 30px;
   cursor: pointer;
   appearance: none;
   outline: none;
   transition: border-color 0.3s ease;
 }

 .dropdown-select:hover,
 .dropdown-select:focus {
   border-color: #FA6409;
 }

 .dropdown-select:active {
   border-color: #e25906;
 }

 @media screen and (width < 900px) {
   .home-services-container .container {
     width: 100%;
   }

   .blur_2,
   .blur_1 {
     display: none;
   }

   .home-services-grid .ant-card-body {
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
   }

   .home-services-title {
     text-align: center;
   }

   .home-services-description {
     text-align: center;
   }

   .home_first_services .home_first_services_img {
     display: flex !important;
     justify-content: center !important;
     align-items: center !important;
   }

   .home_first_services .content {

     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
   }

   .home_first_services img {
     width: 90px !important;
     height: 90px !important;
   }

   .home_first_services .content .home-services-title {
     font-size: 24px;
   }

   .home-services-container .container header {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
   }

   .home-services-container .container header .subtitle {
     text-align: center;
   }

   .about-title {
     font-size: 1.7rem !important;
   }

   .home-services-container .container {
     width: 95%;
   }

   .container_header {
     width: 95%;
   }

   .about-home-container {
     padding: 20px 0 !important;

   }

   .about-home-container .about-home-image img {
     width: 88%;
     margin-top: 20px;
   }

   .stats-section {
     padding: 50px 20px;
   }

   .stats-section .stats-numbers .stat-item h2 {
     font-size: 2rem;
   }

   .projectHome .contentContainer .projectDetails .description {
     text-align: end;
   }

   .projectHome .contentContainer .projectDetails {
     width: 100%;
   }
 }

